[tool.poetry]
name = "password-generator"
version = "0.1.0"
description = "A simple password generator"
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
